hours leading zero option

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ var input = $('#single-input').clockpicker({
 	align: 'left',
 	twelvehour: true,
 	am_pm_delimiter: ' ',
+	hours_leading_zero: false,
 	autoclose: true,
 	'default': 'now'
 });
@@ -410,6 +411,7 @@ var input = $('#single-input').clockpicker({
 	align: 'left',
   twelvehour: true,
   am_pm_delimiter: ' ',
+  hours_leading_zero: false,
 	autoclose: true,
 	'default': 'now'
 });
