custom step for minutes

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ var input = $('#single-input').clockpicker({
 	twelvehour: true,
 	am_pm_delimiter: ' ',
 	hours_leading_zero: false,
+	minute_step: 15,
 	autoclose: true,
 	'default': 'now'
 });
@@ -412,6 +413,7 @@ var input = $('#single-input').clockpicker({
   twelvehour: true,
   am_pm_delimiter: ' ',
   hours_leading_zero: false,
+  minute_step: 15,
 	autoclose: true,
 	'default': 'now'
 });
